# machikana_hcw

./: README.md  c_convert.php  c_convert2.php  hello_cw.bas  log.txt  result.txt
src/: CMakeLists.txt  hello_usb.c  memmap_no_flash.ld
